# auto_arxiv

./: .gitignore  README.md  auto_arxiv_desktop.spec  config.example.toml  pyproject.toml  开发文档.md
.github/workflows/: daily.yml  release.yml
packaging/: desktop_entry.py
public/: app.js  index.html  styles.css
scripts/: build_exe.ps1  package_release.ps1
src/auto_arxiv/: __init__.py  arxiv_client.py  cli.py  config.py  desktop.py  render.py  scoring.py  server.py  store.py  workflow.py
tests/: test_arxiv_client.py  test_config.py  test_scoring.py  test_store.py  test_workflow.py
